# triangle

./: Cargo.toml  LICENSE
src/: compile.cmd
src/data/: pixel.fx  vertex.fx
